--- a/docs/release-notes/v1.31.X.md
+++ b/docs/release-notes/v1.31.X.md
@@ -11,6 +11,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.31.14+k3s1](v1.31.X.md#release-v13114k3s1) | Nov 20 2025| [v1.31.14](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13114) | [v0.14.6-k3s1.31](https://github.com/k3s-io/kine/releases/tag/v0.14.6-k3s1.31) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.1.5-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.1.5-k3s1.32) | [v1.2.8](https://github.com/opencontainers/runc/releases/tag/v1.2.8) | [v0.27.4](https://github.com/flannel-io/flannel/releases/tag/v0.27.4) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.13.1](https://github.com/coredns/coredns/releases/tag/v1.13.1) | [v0.16.16](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.16) | [v0.0.32](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.32)  |
 | [v1.31.13+k3s1](v1.31.X.md#release-v13113k3s1) | Sep 22 2025| [v1.31.13](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13113) | [v0.14.0](https://github.com/k3s-io/kine/releases/tag/v0.14.0) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.1.4-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.1.4-k3s1.32) | [v1.2.7](https://github.com/opencontainers/runc/releases/tag/v1.2.7) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.12+k3s1](v1.31.X.md#release-v13112k3s1) | Aug 25 2025| [v1.31.12](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13112) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.11+k3s1](v1.31.X.md#release-v13111k3s1) | Jul 26 2025| [v1.31.11](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13111) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
@@ -28,6 +29,50 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.31.14+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.14+k3s1)
+<!-- v1.31.14+k3s1 -->
+
+This release updates Kubernetes to v1.31.14, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#changelog-since-v13113).
+
+### Changes since v1.31.13+k3s1:
+
+* Fix garbled CLI [(#13035)](https://github.com/k3s-io/k3s/pull/13035)
+* Update flannel, kube-router and cni plugins [(#13043)](https://github.com/k3s-io/k3s/pull/13043)
+* Backports for 2025-10 [(#13060)](https://github.com/k3s-io/k3s/pull/13060)
+  * Fix netpol fatal error when changing node IP
+  * Bump dynamiclistener for stacked update fix
+  * Bump Klipper Helm and Helm Controller version
+  * Bump Local Path Provisioner version
+  * Fix IPv6 handling for loadbalancer addresses
+  * Fix multiple issues with server shutdown sequencing
+  * Fix etcd member promotion
+  * Bump spegel to v0.4.0
+  * Fix kine metrics registration without --kine-tls
+  * Bump kine to v0.14.2
+  * Fix: default forward after override imports
+  * Fix handling of vendored dependencies in version script
+  * Fix helm controller apiserver address for bootstrap charts on ipv6-only nodes
+  * Create dynamic-cert-regenerate file in CA cert rotation handler
+  * Fix ability to rotate server token to an invalid format
+  * Drop calls to rand.Seed
+  * Bump kine for postgres object count fix
+  * Bump kine=v0.14.5
+  * Bump coredns to 1.13.1
+* Update dispatch script [(#13075)](https://github.com/k3s-io/k3s/pull/13075)
+* Bump helm-controller/klipper-helm [(#13094)](https://github.com/k3s-io/k3s/pull/13094)
+* Backports for 2025-11 [(#13128)](https://github.com/k3s-io/k3s/pull/13128)
+* Inclusive naming proposal [(#13135)](https://github.com/k3s-io/k3s/pull/13135)
+* Migrate release pipeline into GitHub Actions [(#13118)](https://github.com/k3s-io/k3s/pull/13118)
+* Bump runc to v1.2.8 [(#13146)](https://github.com/k3s-io/k3s/pull/13146)
+* Add Prime assets upload [(#13156)](https://github.com/k3s-io/k3s/pull/13156)
+* More backports for 2025-11 [(#13180)](https://github.com/k3s-io/k3s/pull/13180)
+* Bump klipper-helm and helm-controller [(#13196)](https://github.com/k3s-io/k3s/pull/13196)
+* Update to v1.31.14-k3s1 and Go 1.24.9 [(#13203)](https://github.com/k3s-io/k3s/pull/13203)
+* Add id-token [(#13205)](https://github.com/k3s-io/k3s/pull/13205)
+
+-----
 ## Release [v1.31.13+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.13+k3s1)
 <!-- v1.31.13+k3s1 -->
 
