--- a/docs/release-notes/v1.34.X.md
+++ b/docs/release-notes/v1.34.X.md
@@ -11,10 +11,55 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.34.2+k3s1](v1.34.X.md#release-v1342k3s1) | Nov 20 2025| [v1.34.2](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.34.md#v1342) | [v0.14.6](https://github.com/k3s-io/kine/releases/tag/v0.14.6) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.6.5-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.6.5-k3s1) | [v2.1.5-k3s1](https://github.com/k3s-io/containerd/releases/tag/v2.1.5-k3s1) | [v1.3.3](https://github.com/opencontainers/runc/releases/tag/v1.3.3) | [v0.27.4](https://github.com/flannel-io/flannel/releases/tag/v0.27.4) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v3.5.1](https://github.com/traefik/traefik/releases/tag/v3.5.1) | [v1.13.1](https://github.com/coredns/coredns/releases/tag/v1.13.1) | [v0.16.16](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.16) | [v0.0.32](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.32)  |
 | [v1.34.1+k3s1](v1.34.X.md#release-v1341k3s1) | Sep 22 2025| [v1.34.1](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.34.md#v1341) | [v0.14.0](https://github.com/k3s-io/kine/releases/tag/v0.14.0) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.6.4-k3s3](https://github.com/k3s-io/etcd/releases/tag/v3.6.4-k3s3) | [v2.1.4-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.1.4-k3s2) | [v1.3.1](https://github.com/opencontainers/runc/releases/tag/v1.3.1) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.32](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.32)  |
 
 <br />
 
+## Release [v1.34.2+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.34.2+k3s1)
+<!-- v1.34.2+k3s1 -->
+
+This release updates Kubernetes to v1.34.2, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.34.md#changelog-since-v1341).
+
+### Changes since v1.34.1+k3s1:
+
+* Bump traefik to 3.5.1 [(#12957)](https://github.com/k3s-io/k3s/pull/12957)
+* Fix garbled CLI [(#13032)](https://github.com/k3s-io/k3s/pull/13032)
+* Update flannel, kube-router and cni plugins [(#13040)](https://github.com/k3s-io/k3s/pull/13040)
+* Backports for 2025-10 [(#13057)](https://github.com/k3s-io/k3s/pull/13057)
+  * Fix netpol fatal error when changing node IP
+  * Bump dynamiclistener for stacked update fix
+  * Bump Klipper Helm and Helm Controller version
+  * Fix IPv6 handling for loadbalancer addresses
+  * Fix multiple issues with server shutdown sequencing
+  * Fix etcd member promotion
+  * Bump spegel to v0.4.0
+  * Fix kine metrics registration without --kine-tls
+  * Bump kine to v0.14.2
+  * Fix: default forward after override imports
+  * Fix handling of vendored dependencies in version script
+  * Fix helm controller apiserver address for bootstrap charts on ipv6-only nodes
+  * Create dynamic-cert-regenerate file in CA cert rotation handler
+  * Fix ability to rotate server token to an invalid format
+  * Drop calls to rand.Seed
+  * Bump kine for postgres object count fix
+  * Bump kine=v0.14.4, etcd=v3.6.5
+  * Bump coredns to 1.13.1
+* Update dispatch script [(#13078)](https://github.com/k3s-io/k3s/pull/13078)
+* Bump helm-controller/klipper-helm [(#13091)](https://github.com/k3s-io/k3s/pull/13091)
+* Backports for 2025-11 [(#13125)](https://github.com/k3s-io/k3s/pull/13125)
+* Inclusive naming proposal [(#13132)](https://github.com/k3s-io/k3s/pull/13132)
+* Migrate release pipelines into GitHub Actions [(#13119)](https://github.com/k3s-io/k3s/pull/13119)
+* Bump runc to v1.3.3 [(#13144)](https://github.com/k3s-io/k3s/pull/13144)
+* Add Prime assets upload [(#13159)](https://github.com/k3s-io/k3s/pull/13159)
+* More backports for 2025-11 [(#13177)](https://github.com/k3s-io/k3s/pull/13177)
+* Bump klipper-helm and helm-controller [(#13193)](https://github.com/k3s-io/k3s/pull/13193)
+* Update to v1.34.2-k3s1 and Go 1.24.9 [(#13199)](https://github.com/k3s-io/k3s/pull/13199)
+* Add id-token [(#13208)](https://github.com/k3s-io/k3s/pull/13208)
+
+-----
 ## Release [v1.34.1+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.34.1+k3s1)
 <!-- v1.34.1+k3s1 -->
 
