--- a/docs/release-notes/v1.33.X.md
+++ b/docs/release-notes/v1.33.X.md
@@ -11,6 +11,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.33.6+k3s1](v1.33.X.md#release-v1336k3s1) | Nov 20 2025| [v1.33.6](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1336) | [v0.14.6](https://github.com/k3s-io/kine/releases/tag/v0.14.6) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.1.5-k3s1.33](https://github.com/k3s-io/containerd/releases/tag/v2.1.5-k3s1.33) | [v1.3.3](https://github.com/opencontainers/runc/releases/tag/v1.3.3) | [v0.27.4](https://github.com/flannel-io/flannel/releases/tag/v0.27.4) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v3.5.1](https://github.com/traefik/traefik/releases/tag/v3.5.1) | [v1.13.1](https://github.com/coredns/coredns/releases/tag/v1.13.1) | [v0.16.16](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.16) | [v0.0.32](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.32)  |
 | [v1.33.5+k3s1](v1.33.X.md#release-v1335k3s1) | Sep 22 2025| [v1.33.5](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1335) | [v0.14.0](https://github.com/k3s-io/kine/releases/tag/v0.14.0) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.1.4-k3s1](https://github.com/k3s-io/containerd/releases/tag/v2.1.4-k3s1) | [v1.3.1](https://github.com/opencontainers/runc/releases/tag/v1.3.1) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.33.4+k3s1](v1.33.X.md#release-v1334k3s1) | Aug 25 2025| [v1.33.4](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1334) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.33.3+k3s1](v1.33.X.md#release-v1333k3s1) | Jul 26 2025| [v1.33.3](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1333) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
@@ -20,6 +21,51 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.33.6+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.33.6+k3s1)
+<!-- v1.33.6+k3s1 -->
+
+This release updates Kubernetes to v1.33.6, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#changelog-since-v1335).
+
+### Changes since v1.33.5+k3s1:
+
+* Bump traefik to 3.5.1 [(#12958)](https://github.com/k3s-io/k3s/pull/12958)
+* Fix garbled CLI [(#13033)](https://github.com/k3s-io/k3s/pull/13033)
+* Update flannel, kube-router and cni plugins [(#13041)](https://github.com/k3s-io/k3s/pull/13041)
+* Backports for 2025-10 [(#13058)](https://github.com/k3s-io/k3s/pull/13058)
+  * Fix netpol fatal error when changing node IP
+  * Bump dynamiclistener for stacked update fix
+  * Bump Klipper Helm and Helm Controller version
+  * Bump Local Path Provisioner version
+  * Fix IPv6 handling for loadbalancer addresses
+  * Fix multiple issues with server shutdown sequencing
+  * Fix etcd member promotion
+  * Bump spegel to v0.4.0
+  * Fix kine metrics registration without --kine-tls
+  * Bump kine to v0.14.2
+  * Fix: default forward after override imports
+  * Fix handling of vendored dependencies in version script
+  * Fix helm controller apiserver address for bootstrap charts on ipv6-only nodes
+  * Create dynamic-cert-regenerate file in CA cert rotation handler
+  * Fix ability to rotate server token to an invalid format
+  * Drop calls to rand.Seed
+  * Bump kine for postgres object count fix
+  * Bump kine=v0.14.5
+  * Bump coredns to 1.13.1
+* Update dispatch script [(#13077)](https://github.com/k3s-io/k3s/pull/13077)
+* Bump helm-controller/klipper-helm [(#13092)](https://github.com/k3s-io/k3s/pull/13092)
+* Backports for 2025-11 [(#13126)](https://github.com/k3s-io/k3s/pull/13126)
+* Inclusive naming proposal [(#13133)](https://github.com/k3s-io/k3s/pull/13133)
+* Migrate release pipeline into GitHub Actions [(#13116)](https://github.com/k3s-io/k3s/pull/13116)
+* Bump runc to v1.3.3 [(#13145)](https://github.com/k3s-io/k3s/pull/13145)
+* Add Prime assets upload [(#13158)](https://github.com/k3s-io/k3s/pull/13158)
+* More backports for 2025-11 [(#13178)](https://github.com/k3s-io/k3s/pull/13178)
+* Bump klipper-helm and helm-controller [(#13194)](https://github.com/k3s-io/k3s/pull/13194)
+* Update to v1.33.6-k3s1 and Go 1.24.9 [(#13200)](https://github.com/k3s-io/k3s/pull/13200)
+* Add id-token [(#13207)](https://github.com/k3s-io/k3s/pull/13207)
+
+-----
 ## Release [v1.33.5+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.33.5+k3s1)
 <!-- v1.33.5+k3s1 -->
 
