Address Orlin comments
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/blog/2026-01-15-K3s-1.35-release.md
+++ b/blog/2026-01-15-K3s-1.35-release.md
@@ -9,7 +9,7 @@ Kubernetes 1.35 has arrived! As we roll out this latest version, it’s the perf
 
 <!-- truncate -->
 
-Our focus this release was on stability. We know our users value a platform that remains consistent and reliable year-over-year. From major security milestones to core language upgrades, here is what’s new in the world of K3s.
+Our focus this release was on stability. We know that our users value a platform that remains consistent and reliable year over year. From major security milestones to core language upgrades, here is what’s new in the world of K3s.
 
 ## Key Features and Improvements ✨
 
@@ -35,7 +35,7 @@ You can find more information on what v1.35 brought upstream in this cool [blog 
 
 ## Bug Fixes and Notable Changes 🛠️
 
-As always, there were a lot of bug fixes and here are the most impactful:
+As always, there were a lot of bug fixes and here, are the most impactful:
 
 * **Networking & Dual-Stack Resilience:** We've pushed several fixes to stabilize complex networking setups. This includes corrected IPv6 handling for LoadBalancer addresses, resolving fatal errors in Network Policies (NetPol) when node IPs change, and hardening our Tailscale integration to handle pre-existing configurations more gracefully.
 * **Reliable HA Cluster Management:** Resolved critical edge-case bugs related to etcd member promotion and bootstrap data reconciliation. This ensures that when etcd members join or leave, or are restarted, the quorum remains stable and the promotion process is seamless.
@@ -67,7 +67,7 @@ We are incredibly grateful to our community members who contributed key improvem
 
 If K3s is making your life easier, the best way to say "thanks" is to add your company to our official Adopters list. It’s a tiny gesture that carries a lot of weight for the project's health and visibility within the CNCF ecosystem. We are currently working hard to get our 'status' inside the CNCF to progress and showing a large list of Adopters would help tremendously.
 
-The task is easy, create a PR that adds your name in https://github.com/k3s-io/k3s/blob/main/ADOPTERS.md.
+The task is easy: create a PR that adds your name in https://github.com/k3s-io/k3s/blob/main/ADOPTERS.md.
 
 Thanks a lot!
 
